feat: make spaceport cover tactically directional